# ta-statistics

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  maximum.rs  minimum.rs  paired_statistics.rs  rolling_mode.rs  rolling_moments.rs  single_statistics.rs  statistics.rs
src/rolling/: mod.rs  rolling_median.rs  rolling_mode.rs  rolling_moments.rs
src/traits/: mod.rs  paired_statistics.rs  single_statistics.rs
src/utils/: deque.rs  helper.rs  mod.rs  monotonic_queue.rs  rb_tree.rs  ring_buffer.rs  window.rs
