[package]
name = "ta-statistics"
version = "0.2.3"
edition = "2024"

authors = ["Dhruv Soi<l33t.quant@gmail.com>"]
description = "Rolling statistics for technical analysis in backtesting and live trading systems."
license = "MIT"
repository = "https://github.com/l33tquant/ta-statistics"
documentation = "https://docs.rs/ta-statistics"
readme = "README.md"
keywords = [
    "technical-analysis",
    "backtesting",
    "trading",
    "algotrading",
    "statistics",
]
categories = ["algorithms", "finance", "mathematics"]

[dependencies.compensated-summation]
version = "0.3.1"

[dependencies.ordered-float]
version = "5.0"

[dependencies.ahash]
version = "0.8"
default-features = false
features = ["runtime-rng"]

[dependencies.hashbrown]
version = "0.15.2"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dev-dependencies.assert_approx_eq]
version = "1.1"
